# metabase-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: agent-memory-langgraph-mongodb.md  memory-skills-implementation.md
scripts/: init_pgvector_memory.py  openai_responses_demo.py
skills/agent-memory/: SKILL.md
skills/metabase-analysis/: SKILL.md
skills/sql-safety/: SKILL.md
src/metabase_agent/: main.py
src/metabase_agent/agent/: clarify.py  dry_run.py  graph.py  metadata.py  metadata_flow.py  sql_review.py  state.py  tool_loop.py  tools.py  trace.py
src/metabase_agent/api/: app.py  store.py
src/metabase_agent/api/static/: index.html
src/metabase_agent/cli/: app.py
src/metabase_agent/config/: settings.py
src/metabase_agent/memory/: __init__.py  extractor.py  manager.py  models.py  namespaces.py  prompt.py  repository.py  vector.py
src/metabase_agent/metrics/: metric_resolver.py
src/metabase_agent/policy/: query_policy.py
src/metabase_agent/query/: bigquery_report_sql.py  query_planner.py  query_program_builder.py
src/metabase_agent/semantics/: business_glossary.py  intent_parser.py  llm_client.py  llm_intent.py  sql_explainer.py
src/metabase_agent/skills/: __init__.py  registry.py
tests/: test_api.py  test_bigquery_report_sql.py  test_cli.py  test_graph.py  test_llm_intent.py  test_memory_system.py  test_metabase_client.py  test_metric_resolver.py  test_native_sql.py  test_query_program.py  test_semantics.py  test_settings.py  test_skills.py  test_sql_explainer.py  test_sql_review.py  test_store.py  test_tool_loop.py
(+2 files in other folders)
