[project]
name = "metabase-agent-python"
version = "0.1.0"
description = "Python Metabase semantic analytics agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx[socks]>=0.27.0",
  "langgraph>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
metabase-agent = "metabase_agent.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/metabase_agent"]
