[project]
name = "metabase-agent-python"
version = "0.1.0"
description = "Python Metabase semantic analytics agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx[socks]>=0.27.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-mongodb>=0.4.0",
  "openai>=1.0.0",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pymongo>=4.12,<4.17",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
metabase-agent = "metabase_agent.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/metabase_agent"]
